apps/kube/agones/nd-server/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: nd-server
    namespace: nexus-defense
    labels:
        app: nd-server
        app.kubernetes.io/part-of: nexus-defense
        kbve.com/category: game-server
        kbve.com/stack: agones
        kbve.com/managed-by: argocd
spec:
    type: ClusterIP
    selector:
        app: nd-server
    ports:
        - name: ws
          port: 7878
          targetPort: 7878
          protocol: TCP
